--- a/content/posts/2024-06-12-podman.md
+++ b/content/posts/2024-06-12-podman.md
@@ -96,6 +96,52 @@ graphroot = "/var/lib/containers/storage"
 
 
 
+```toml
+# mac 配置镜像仓库
+cat ~/.config/containers/registries.conf 
+[[registry]]
+location = "quay.io"
+
+[[registry.mirror]]
+location = "quay.nju.edu.cn"
+
+[[registry]]
+location = "gcr.io"
+
+[[registry.mirror]]
+location = "gcr.nju.edu.cn"
+
+[[registry]]
+location = "ghcr.io"
+
+[[registry.mirror]]
+location = "ghcr.nju.edu.cn"
+
+[[registry]]
+location = "registry.k8s.io"
+
+[[registry.mirror]]
+location = "k8s.nju.edu.cn"
+
+[[registry]]
+location = "registry.gitlab.com"
+
+[[registry.mirror]]
+location = "glcr.nju.edu.cn"
+
+[[registry]]
+location = "docker.io"
+
+[[registry.mirror]]
+location = "m.daocloud.io/docker.io"
+```
+
+podman desktop  mac 配置
+
+https://desktop.podman.org.cn/docs/containers/registries
+
+
+
 3、podman常用命令
 
 容器
