--- a/content/posts/2024-07-07-protobuf.md
+++ b/content/posts/2024-07-07-protobuf.md
@@ -179,3 +179,23 @@ type Test_Child struct {
 }
 ```
 
+
+
+问题处理
+
+GRPC proto go 里面，定义了int64，生成的swagger文档中类型回被变成string 类型，可以用以下方法处理，这样生成的swagger文档中就不回出现数字变成字符串的问题
+
+```protobuf
+import "protoc-gen-openapiv2/options/openapiv2.proto";
+
+
+message List{
+ int64 date=17 [
+    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
+      type: INTEGER,
+      format: "int64"
+    }
+  ]; // 时间
+}
+```
+
