--- a/content/posts/2024-09-09-gorm-gen.md
+++ b/content/posts/2024-09-09-gorm-gen.md
@@ -115,5 +115,12 @@ func main() {
 		CreateInBatches(items, 30)
 ```
 
+表设计优化，这样只有当deleted_at为null的时候，才会触发code的唯一性校验
+
+```
+create unique index pa_code
+    on pa (code) where deleted_at is null;
+```
+
 
 
