--- a/content/posts/2025-01-04-lo.md
+++ b/content/posts/2025-01-04-lo.md
@@ -37,6 +37,23 @@ lo.KeyBy(aa, func(item *abc) string {
 	return item.A
 })
 
+// 生成 map  map[string][]*abc{}
+lo.GroupBy(aa, func(item *abc) string {
+	return item.A
+})
+
+// 根据条件过滤切片里的元素
+even := lo.Filter([]int{1, 2, 3, 4}, func(x int, index int) bool {
+    return x%2 == 0
+})
+// []int{2, 4}
+
+
+//  for 循环
+lo.ForEach([]string{"hello", "world"}, func(x string, _ int) {
+    println(x)
+})
+
 
 
 // Associate (alias: SliceToMap)
@@ -161,6 +178,10 @@ result := lo.Splice([]string{"a", "b"}, 1, "1", "2")
 // 获取map的key
 keys := lo.Keys(map[string]int{"foo": 1, "bar": 2})
 // []string{"foo", "bar"}
+
+// 获取多个map的key的唯一值，组成唯一的slice
+keys := lo.UniqKeys(map[string]int{"foo": 1, "bar": 2}, map[string]int{"baz": 3})
+// []string{"foo", "bar", "baz"}
 
 // 判断key是否存在
 exists := lo.HasKey(map[string]int{"foo": 1, "bar": 2}, "foo")
