--- a/content/posts/2024-09-09-gorm-gen.md
+++ b/content/posts/2024-09-09-gorm-gen.md
@@ -14,6 +14,33 @@ categories = ["Gorm","DevOps"]
 
 Gen是一个基于GORM的安全ORM框架，其主要通过代码生成方式实现GORM代码封装。使用Gen框架能够自动生成Model结构体和类型安全的CRUD代码，极大提升CRUD效率。
 
+
+
+### 介绍
+
+[Gen](https://github.com/go-gorm/gen)是由字节跳动无恒实验室与GORM作者联合研发的一个基于GORM的安全ORM框架，主要通过代码生成方式实现GORM代码封装。
+
+Gen框架在GORM框架的基础上提供了以下能力：
+
+- 基于原始SQL语句生成可重用的CRUD API
+- 生成不使用`interface{}`的100%安全的DAO API
+- 依据数据库生成遵循GORM约定的结构体Model
+- 支持GORM的所有特性
+
+简单来说，使用Gen框架后我们无需手动定义结构体Model，同时Gen框架也能帮我们生成类型安全的CRUD代码。
+
+更多详细介绍请查看[Gen官方文档](https://gorm.io/gen/)。
+
+此外，Facebook开源的[ent](https://github.com/ent/ent)也是社区中常用的类似框架，大家可按需选择使用。
+
+
+
+### 使用
+
+```shell
+go get grom.io/gen
+```
+
 ```go
 const DSN = "postgres://user:password@127.0.0.1:5432/hello?sslmode=disable&TimeZone=Asia/Shanghai&search_path=public"
 
@@ -121,6 +148,8 @@ func main() {
 create unique index pa_code
     on pa (code) where deleted_at is null;
 ```
+
+
 
 
 
