--- a/content/posts/2024-10-26-java.md
+++ b/content/posts/2024-10-26-java.md
@@ -8,12 +8,69 @@ categories = ["Java 基础"]
 
 +++
 
-Java 
+## Java
+
+
+
+配置settings
+
+默认读取位置
+
+* ~/.m2
+
+```xml
+curl -O https://repo1.maven.org/maven2/archetype-catalog.xml
+
+<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd">
+  <localRepository>/home/sugar/.m2/repository</localRepository>
+  <mirrors>
+    <mirror>
+      <id>alimaven</id>
+      <mirrorOf>central</mirrorOf>
+      <name>aliyun maven</name>
+      <url>https://maven.aliyun.com/nexus/content/groups/public/</url>
+    </mirror>
+  </mirrors>
+  <profiles>
+    <profile>
+      <id>archetype-catalog</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <archetypeCatalog>file:///Users/sugar/.m2/archetype-catalog.xml</archetypeCatalog>
+      </properties>
+    </profile>
+  </profiles>
+</settings>
+```
+
+```shell
+# 手动下载依赖
+mvn -B -f pom.xml -s /usr/share/maven/ref/settings.xml dependency:resolve
+
+# 打包
+mvn package
+```
+
 
 
 ## 一、基础
 
 1、helloworld
+
+java 的包名需要和目录一致，类名需要与文件名一致
+
+```shell
+[sugar@Sugar java]🐳 tree .
+.
+└── Hello
+    └── Hello.java
+
+1 directory, 1 file
+```
 
 ```java
 public class Hello {
@@ -63,6 +120,46 @@ double r = 5.0;
 double area = PI * r * r;
 
 var sb = new StringBuilder();
+
+String s = "hello";
+final double PI = 3.14; // PI是一个常量
+
+// 初始化一个对象
+Pet dog = new Pet();
+// 初始化一个数组
+int[] arr = new int[10];
+
+String wepublic = "github";
+String wepublic = new String();
+String wepublic = new String("github");
+```
+
+```java
+public class RunoobTest {
+    // 成员变量
+    private int instanceVar;
+    // 静态变量
+    private static int staticVar;
+    
+    public void method(int paramVar) {
+        // 局部变量
+        int localVar = 10;
+        
+        // 使用变量
+        instanceVar = localVar;
+        staticVar = paramVar;
+        
+        System.out.println("成员变量: " + instanceVar);
+        System.out.println("静态变量: " + staticVar);
+        System.out.println("参数变量: " + paramVar);
+        System.out.println("局部变量: " + localVar);
+    }
+    
+    public static void main(String[] args) {
+        RunoobTest v = new RunoobTest();
+        v.method(20);
+    }
+}
 ```
 
 三元运算
@@ -96,15 +193,11 @@ public class Main {
 
 **流程控制**
 
-流程控制
-
 ```java
 public class Main {
     public static void main(String[] args) {
         System.out.print("A,");
         System.out.print("B,");
-        System.out.print("C.");
-        System.out.println();
         System.out.println("END");
     }
 }
@@ -163,6 +256,15 @@ public class Main {
             System.out.println("Selected 3");
             break;
         }
+        
+        
+        switch (grade / 10) {
+            case 10,9 -> System.out.println("该学生成绩优秀");
+            case 8 -> System.out.println("该学生成绩良好");
+            case 7 -> System.out.println("该学生成绩中等");
+            case 6 -> System.out.println("该学生成绩基本合格");
+            default -> System.out.println("该学生成绩不合格");
+
     }
 }
 
@@ -227,6 +329,14 @@ public class Main {
     }
 }
 
+public class Main {
+    public static void main(String[] args) {
+        int[] numbers = {1, 4, 5, 6, 9, 10};
+        for (int number : numbers) {
+            System.out.print(number + "\t");
+        }
+    }
+}
 ```
 
 数组操作
@@ -239,10 +349,24 @@ for (int n : ns) {
 // 遍历数组
 import java.util.Arrays;
 
+// 标准库操作
+
 public class Main {
     public static void main(String[] args) {
         int[] ns = { 1, 1, 2, 3, 5, 8 };
         System.out.println(Arrays.toString(ns));
+    }
+}
+
+public class EnforceTraverseTest {
+    public static void main(String[] args) {
+        String[] arr = new String[5];
+        arr = new String[]{"村雨遥", "海贼王", "进击的巨人", "鬼灭之刃", "斗罗大陆"};
+        int index = 0;
+        for (String name : arr) {
+            System.out.println("第 " + (index + 1) + " 个元素：" + name);
+            index++;
+        }
     }
 }
 ```
@@ -425,5 +549,128 @@ public class Main {
         Integer.parseInt(null); // 会抛出NumberFormatException
     }
 }
+```
+
+
+
+list使用
+
+```java
+// 拼接字符串
+List<String> dd = new ArrayList<>();
+dd.add(aa);
+String msg = String.join("-", dd);
+
+
+public class EnhanceForTest {
+    public static void main(String[] args) {
+        ArrayList<Integer> list = new ArrayList<>();
+        list.add(1);
+        list.add(3);
+        for (Integer element : list) {
+            System.out.println(element);
+        }
+    }
+}
+
+// 迭代器
+public class IterTest {
+    public static void main(String[] args) {
+        ArrayList<Integer> list = new ArrayList<>();
+        list.add(1);
+        list.add(2);
+        list.add(3);
+        Iterator<Integer> iter = list.iterator();
+        while (iter.hasNext()) {
+            System.out.println(iter.next());
+        }
+    }
+}
+```
+
+map 使用
+
+* `HashMap`：无序，允许 null 键和多个 null 值，性能最好。
+
+* `TreeMap`：有序（根据 key 的自然顺序或自定义 Comparator）。
+
+* `LinkedHashMap`：按插入顺序排列。
+
+* `ConcurrentHashMap`：线程安全的高性能并发 Map。
+
+```java
+public class MapExample {
+    public static void main(String[] args) {
+        Map<String, Integer> map = new HashMap<>();     
+        map.put("apple", 3);
+        map.put("banana", 5);
+        map.put("orange", 2);      
+        System.out.println(map); // 输出: {orange=2, banana=5, apple=3}（无序）
+    }
+}
+
+// 获取值
+int count = map.get("banana");  // 5
+Integer missing = map.getOrDefault("grape", 0); // 如果没有就返回默认值
+
+// 遍历map
+for (Map.Entry<String, Integer> entry : map.entrySet()) {
+    System.out.println(entry.getKey() + " = " + entry.getValue());
+}
+
+// 遍历 key
+for (String key : map.keySet()) {
+    System.out.println("Key: " + key);
+}
+
+// 遍历 value
+for (Integer value : map.values()) {
+    System.out.println("Value: " + value);
+}
+
+// 判断key是否存在
+map.containsKey("apple");   // true
+map.containsValue(5);       // true
+
+// 删除元素
+map.remove("banana");  // 删除 banana 对应的键值对
+```
+
+set
+
+```java
+Set<String> set = new HashSet<>();
+set.add("apple");
+set.add("banana");
+set.add("apple"); // 被忽略
+
+System.out.println(set); // [banana, apple]（顺序不保证）
+```
+
+队列
+
+```java
+Queue<String> queue = new LinkedList<>();
+queue.offer("apple");
+queue.offer("banana");
+System.out.println(queue.poll()); // apple
+System.out.println(queue.poll()); // banana
+```
+
+try-catch
+
+```java
+try{
+	xxxx;
+}catch (IOException e) {
+           throw e;
+        }
+
+// try-catch 加条件判断
+try("aaa"=="aaa"){
+	xxxx;
+}catch (IOException e) {
+           throw e;
+        }
 ```
 
