--- a/content/posts/2023-11-18-git.md
+++ b/content/posts/2023-11-18-git.md
@@ -1028,3 +1028,42 @@ fatal: 写提交对象失败
 
 ```
 
+
+
+## 十、配置http
+
+git 拉取代码使用的协议是ssh，但也可以使用http
+
+配置：
+
+```shell
+[root@Krab ~]🐳 git config --global credential.helper store
+
+# 配置后~/.gitconfig 文件会增加配置
+[credential]
+	helper = store
+
+# 在第一次访问git服务的时候，密钥会被记录在 ~/.git-credentials 文件中
+
+
+# 配置历史项目改成使用http(此方法适用http转ssh或者ssh转http，或者更换指定git服务器)
+
+[url "http://local.io/"]
+        insteadOf = git@local.io:
+
+
+```
+
+配置github ssh 走代理
+
+```shell
+[root@Krab ~]🐳 cat ~/.ssh/config 
+Host github.com
+  User git
+  ProxyCommand nc -v -x 127.0.0.1:5888 %h %p
+```
+
+
+
+
+
