--- a/content/posts/2024-10-26-java.md
+++ b/content/posts/2024-10-26-java.md
@@ -586,6 +586,8 @@ public class IterTest {
         }
     }
 }
+
+list.stream().forEach(System.out::println);
 ```
 
 map 使用
@@ -634,6 +636,17 @@ map.containsValue(5);       // true
 
 // 删除元素
 map.remove("banana");  // 删除 banana 对应的键值对
+
+
+List <ccDTO> ccDTOList  = new ArrayList<>();
+ccMap.forEach((K,V)->{
+    ccDTO ccDTO = new ccDTO();
+    ccDTO.setName(K);
+    ccDTO.setList(V);
+    ccDTOList.add(ccDTO);
+});
+
+
 ```
 
 set
@@ -672,5 +685,96 @@ try("aaa"=="aaa"){
 }catch (IOException e) {
            throw e;
         }
+```
+
+
+
+代码片段
+
+```java
+// list 转 map
+// 示例1
+List<DataDTO> list = new ArrayList<>();
+Map<Long,Integer> map = list.stream()
+                .collect(Collectors.toMap(DataDTO::getId, DataDTO::getQty));
+   
+// 示例2
+List<SinfoDTO> pList = new ArrayList<>();
+Map<Long, SinfoDTO> itemMap = pList.stream()
+                    .collect(Collectors.toMap(
+                            SinfoDTO::getId,
+                            item -> item 
+                    ));
+
+// 列表的遍历
+list.forEach(item -> {
+     if (item.getId()==0){
+      /// xxxxx
+    }
+});
+
+// 对象克隆
+// import cn.hutool.core.util.ObjectUtil;
+LambdaQueryWrapper<ItemPlan> allStatusQw = ObjectUtil.clone(qw);
+
+
+// 分页
+Page<StyleLib> pageModel = new Page<>(req.getPage(), req.getLimit());
+Page<StyleLib> dataPage =  this.page(pageModel,qw);
+
+
+// 拼接条件
+qw.and(wrapper
+    -> wrapper.like(ItemPlan::getName, name)
+        .or()
+        .eq(ItemPlan::getName, name));
+
+mainQw.and(wrapper -> {
+  req.getExtraName().forEach(item -> {
+    if (StringUtils.isNotBlank(item)) {
+      wrapper.or().like(MallSample::getExtraName, item);
+    }
+  });
+});
+
+
+LambdaQueryWrapper<ItemPlan> qw = SqlUtils
+                .getLambdaQueryWrapper(ItemPlan.class)
+                .in((CollectionUtils.isNotEmpty(req.getIds())), ItemPlan::getId,
+                        req.getIds())
+            
+// 不为空则查询            
+LambdaQueryWrapper<ItemPlan> qw =
+    SqlUtils.getLambdaQueryWrapper(ItemPlan.class)
+        .in((CollectionUtils.isNotEmpty(req.getIds())), ItemPlan::getId, req.getIds());            
+
+
+// copy对象
+// import cn.hutool.core.bean.BeanUtil;
+BeanUtil.copyProperties(data, res);
+
+// list过滤数据
+List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
+List<Integer> evenNumbers = numbers.stream()
+                                   .filter(n -> n % 2 == 0)
+                                   .collect(Collectors.toList());
+// int 转 string 的list
+List<String> stringNumbers = numbers.stream()
+                                    .map(String::valueOf)
+                                    .collect(Collectors.toList());
+// 求和
+int sum = numbers.stream().mapToInt(Integer::intValue).sum();
+
+// 去重
+List<Integer> distinct = numbers.stream().distinct().collect(Collectors.toList());
+
+// 排序
+List<Integer> sorted = numbers.stream().sorted().collect(Collectors.toList());
+List<Integer> sortedDesc = numbers.stream().sorted(Collections.reverseOrder()).collect(Collectors.toList());
+
+// map 操作
+aaaMap.forEach((k, v)-> { 
+	// xxxx
+});
 ```
 
