--- a/content/posts/2024-06-12-podman.md
+++ b/content/posts/2024-06-12-podman.md
@@ -94,11 +94,57 @@ graphroot = "/var/lib/containers/storage"
 
 ```
 
+linux 配置全局
+
+ ```toml
+[root@localhost ~]# cat /etc/containers/registries.conf.d/sugar.conf 
+
+[[registry]]
+location = "quay.io"
+
+[[registry.mirror]]
+location = "quay.nju.edu.cn"
+
+[[registry]]
+location = "gcr.io"
+
+[[registry.mirror]]
+location = "gcr.nju.edu.cn"
+
+[[registry]]
+location = "ghcr.io"
+
+[[registry.mirror]]
+location = "ghcr.nju.edu.cn"
+
+[[registry]]
+location = "registry.k8s.io"
+
+[[registry.mirror]]
+location = "k8s.nju.edu.cn"
+
+[[registry]]
+location = "registry.gitlab.com"
+
+[[registry.mirror]]
+location = "glcr.nju.edu.cn"
+
+[[registry]]
+location = "docker.io"
+
+[[registry.mirror]]
+location = "m.daocloud.io/docker.io"
+ ```
+
 
 
 ```toml
-# mac 配置镜像仓库
+# mac,linux 配置镜像仓库
 cat ~/.config/containers/registries.conf 
+
+unqualified-search-registries = ["docker.io"]
+short-name-mode = "enforcing"
+
 [[registry]]
 location = "quay.io"
 
