--- a/content/posts/2024-10-26-java.md
+++ b/content/posts/2024-10-26-java.md
@@ -776,5 +776,23 @@ List<Integer> sortedDesc = numbers.stream().sorted(Collections.reverseOrder()).c
 aaaMap.forEach((k, v)-> { 
 	// xxxx
 });
+
+
+```
+
+Builder注解
+
+```java
+// @Builder注解
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class OptionDto {
+    private String code;    
+}
+
+// 具体使用
+OptionDto cc = OptionDto.builder().code("code").build();
 ```
 
