--- a/content/posts/2024-06-02-go-gorm.md
+++ b/content/posts/2024-06-02-go-gorm.md
@@ -408,3 +408,13 @@ db.Model(&User{}).Where("active = ?", true).Update("name", "hello")
 
 
 
+事物
+
+```
+	bErr := db.WithContext(ctx).Transaction(func(tx *gorm.DB) (err error) {
+		err = s.repo.CreateUser(ctx, tx, []*model.User{user})
+		return
+	})
+
+```
+
