--- a/content/posts/2024-09-09-gorm-gen.md
+++ b/content/posts/2024-09-09-gorm-gen.md
@@ -109,22 +109,30 @@ func main() {
 			&field.RelateConfig{
 				RelateSlicePointer: true,
 				GORMTag: field.GormTag{
-					"foreignKey": []string{
-						"ID",
-					},
 					"references": []string{
 						"ActionID",
+					},
+                    "foreignKey": []string{
+						"ID",
 					},
 				},
 			},
 		),
 	)
+
+	people := g.GenerateModel("people",
+		gen.FieldRelate(field.HasOne, "Type", peopleType,
+			&field.RelateConfig{
+				RelatePointer: true,
+				GORMTag:       "references:TypeID;foreignKey:ID",
+			},
+		))
 ```
 
 基于索引的情况下批量更新或者新增
 
 ```go
-	err = pa.WithContext(ctx).Clauses(
+	err = user.WithContext(ctx).Clauses(
 		clause.OnConflict{
 			Columns: []clause.Column{
 				{Name: user.Code.ColumnName().String()},
@@ -132,7 +140,7 @@ func main() {
 			TargetWhere: clause.Where{
 				Exprs: []clause.Expression{
 					clause.Expr{
-						SQL: "deleted_at = 0",
+						SQL: "deleted_at is null",
 					},
 				},
 			},
@@ -147,6 +155,68 @@ func main() {
 ```
 create unique index pa_code
     on pa (code) where deleted_at is null;
+```
+
+分页
+
+```go
+	if cond.Page == 0 {
+		cond.Page = 1
+	}
+	if cond.Size == 0 {
+		cond.Size = 20
+	}
+	
+	items, count, err = do.FindByPage(int((cond.Page-1)*cond.Size), int(cond.Size))
+```
+
+根据传入的字段查询
+
+```go
+func (u *UserRepo) GetUserListOption(ctx context.Context, db *gorm.DB, items []field.Expr) (data []*model.User, err error) {
+
+	mm := query.Use(db).User
+	data, err = mm.WithContext(ctx).Debug().Distinct().Select(items...).Find()
+	return
+}
+
+```
+
+or 条件拼接
+
+```go
+func (u *UserRepo) GetRoleOptionV2(ctx context.Context, db *gorm.DB) (items []*model.Role, err error) {
+	mm := query.Use(db).Role
+	bb := mm.WithContext(ctx)
+	cc := bb.Where(mm.ID.Eq(0))
+	items, err = cc.Where(mm.Name.Eq("aaa")).Where(bb.Where(mm.Code.Eq("aaa")).Or(mm.Status.Eq(1))).Debug().Find()
+	return
+}
+
+
+
+
+SELECT * FROM "role" WHERE "role"."id" = 0 AND "role"."name" = 'aaa' AND ("role"."code" = 'aaa' OR "role"."status" = 1) AND "role"."deleted_at" IS NULL
+```
+
+pg数组字段查询
+
+```
+import "github.com/lib/pq"
+
+type Product struct {
+    ID     uint
+    Name   string
+    TagIDs pq.Int64Array `gorm:"type:bigint[]"`
+}
+
+var products []*Product
+// 查询
+db.UnderlyingDB("tag_ids @> ?", pq.Int64Array{1001}).Find(&products)
+
+tx.UnderlyingDB().Where("name @> ?", fmt.Sprintf(`["%s"]`, "aaaa"))
+
+do.UnderlyingDB().Where(fmt.Sprintf("shortname ILIKE ANY (ARRAY[%s])", keyword))
 ```
 
 
