--- a/content/posts/2024-10-26-java.md
+++ b/content/posts/2024-10-26-java.md
@@ -796,3 +796,17 @@ public class OptionDto {
 OptionDto cc = OptionDto.builder().code("code").build();
 ```
 
+
+
+变量使用，需要加final
+
+```
+Map<Long,Integer> finalQtyMap;
+
+if (xxxx){
+	finalQtyMap = xxxxx;
+}else {
+	finalQtyMap = xxxxbbbb;
+}
+```
+
